# Beecrowd

./: .gitignore
C/: 1005_Media_1.c  1009_SalarioComBonus.c  1011_Esfera.c  1017_GastoDeCombustivel.c  1020_idade_em_dias.c  1036_Formula_De_Bhaskara.c  1037_Intervalo.c  1049_Animal.c  CMakeLists.txt
C++/: 1001_Extremamente_Basico.cpp  1002_Area_Do_Circulo.cpp  1003_Soma_Simples.cpp  1004_Produto_Simples.cpp  1005_Media_1.cpp  1006_Media_2.cpp  1007_Diferenca.cpp  1008_Salario.cpp  1009_Salario_Bonus.cpp  1010_Calculo_Simples.cpp  1014_Consumo.cpp  1021_NotasEMoedas.cpp  1038_Lanche.cpp  1040_Media3.cpp  1050_DDD.cpp  1052_Mes.cpp  1113_CrescenteEDecrescente.cpp  1114_SenhaFixa.cpp  CMakeLists.txt
Java/: Media_1.java
Python/: 1005_Media.py  1009_SalarioComBonus.py  1011_Esfera.py  1017_GastoDeCombustivel.py  1020_IdadeEmDias.py  1036_FormulaDeBhaskara.py  1041_CoordenadasDeUmPonto.py  1049_Animal.py  1065_ParesEntreCincoNumeros.py  1101_SequenciaDeNumerosESoma.py
