cmake_minimum_required(VERSION 3.26)
project(C__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(1008_Salario 1008_Salario.cpp)
add_executable(1009_Salario_Bonus 1009_Salario_Bonus.cpp)
add_executable(1014_Consumo 1014_Consumo.cpp)
add_executable(1021_NotasEMoedas 1021_NotasEMoedas.cpp)
add_executable(1038_Lanche 1038_Lanche.cpp)
add_executable(1040_Media3 1040_Media3.cpp)
add_executable(1050_DDD 1050_DDD.cpp)
add_executable(1052_Mes 1052_Mes.cpp)
add_executable(1113_CrescenteEDecrescente 1113_CrescenteEDecrescente.cpp)
add_executable(1114_SenhaFixa 1114_SenhaFixa.cpp)
add_executable(1000_Hello_World 1000_Hello_World.cpp)
add_executable(1001_Extremamente_Basico 1001_Extremamente_Basico.cpp)
add_executable(1002_Area_Do_Circulo 1002_Area_Do_Circulo.cpp)
add_executable(1003_Soma_Simples 1003_Soma_Simples.cpp)
add_executable(1004_Produto_Simples 1004_Produto_Simples.cpp)
add_executable(1005_Media_1 1005_Media_1.cpp)
add_executable(1006_Media_2 1006_Media_2.cpp)
add_executable(1007_Diferenca 1007_Diferenca.cpp)
add_executable(1010_Calculo_Simples 1010_Calculo_Simples.cpp)
