cmake_minimum_required(VERSION 3.26)
project(C C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(1009_SalarioComBonus 1009_SalarioComBonus.c)
add_executable(1017_GastoDeCombustivel 1017_GastoDeCombustivel.c)
add_executable(1037_Intervalo 1037_Intervalo.c)
add_executable(1049_Animal 1049_Animal.c)
